# canvas-learning-mastery

./: .coverage  .gitignore  .pylintrc  README.md  config-example.py  lmgapp.py  migration.py  pyproject.toml  requirements.txt  root_app.py  settings.py  setup.cfg  tests.py
app/: __init__.py  assignments.py  auth.py  courses.py  errors.py  forms.py  models.py  outcomes.py  routes.py  server.py
app/static/js/: courseFilters.js  index.js
app/static/styles/: main.css
app/templates/: 404.html  500.html  about.html  assignments.html  base.html  course.html  dashboard.html  index.html  login.html  temp.html  user.html
htmlcov/: app___init___py.html  app_assignments_py.html  app_auth_py.html  app_courses_py.html  app_errors_py.html  app_forms_py.html  app_models_py.html  app_outcomes_py.html  app_routes_py.html  index.html  status.json
migrations/versions/: 64b0d6d1a5a2_initial.py  6b4dda79d926_add_refresh_token_key_for_users.py  7ac635a9b8bb_add_expiration_timestamp_to_user_model.py  8256df210df2_add_course_id_to_assignment.py  88510f7d95e7_initial.py  ba0d3f6d8cc9_really_remove_last_section_key.py  bc4519596133_create_new_sequential_id_for_outcome_.py  dadc753a956a_add_user_model.py  ddbd3eb45891_initial_mysql_create.py  de6c9ce558a9_remove_association_table_add_course_id_.py  ee57394e52d2_remove_last_section_key_for_now.py
tests/: .coverage  test_assignments.py  test_auth.py  test_courses.py  test_outcomes.py  test_routes.py  test_users.py  utils.py
