[tool.poetry]
name = "Canvas LMS SBG Helper"
version = "0.2.0"
description = "A Flask application to manage standards based grading in Canvas LMS."
authors = ["bennettscience <brian.bennett2@gmail.com>"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
canvasapi = "^2.1.0"
Flask-Bootstrap = "^3.3.7"
Flask-SQLAlchemy = "^2.4.4"
Flask-WTF = "^0.14.3"
Flask-Cors = "^3.0.10"
Flask-Login = "^0.5.0"
requests-oauthlib = "^1.3.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"
Flask-Migrate = "^2.5.3"
python-dotenv = "^0.15.0"
Flask-DebugToolbar = "^0.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
